[gd_scene load_steps=2 format=2]

[ext_resource path="res://EditCreateWindow.gd" type="Script" id=1]

[node name="WindowDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Add new entry"
resizable = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 39
custom_constants/margin_top = 37
custom_constants/margin_left = 61
custom_constants/margin_bottom = 47

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 61.0
margin_top = 37.0
margin_right = 985.0
margin_bottom = 553.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 14.0
text = "Editing TableName"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 924.0
margin_bottom = 516.0
size_flags_vertical = 3

[node name="FieldsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 816.0
margin_bottom = 492.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 924.0
margin_bottom = 492.0
alignment = 1

[node name="Save Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 224.0
margin_right = 104.0
margin_bottom = 244.0
text = "Save N Upload"

[node name="Close Window" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 248.0
margin_right = 104.0
margin_bottom = 268.0
text = "Close window"

[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Save Button" to="." method="_on_Save_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Close Window" to="." method="_on_Close_Window_pressed"]
